# healbee

./: .env.example  README.md  TESTING.md  main.py  pyproject.toml  requirements.txt  supabase_schema.sql
src/: audio_capture.py  hinglish_symptoms.json  nlu_processor.py  nominatim_places.py  prompts.py  response_generator.py  supabase_client.py  symptom_checker.py  symptom_knowledge_base.json  ui.py  utils.py
tests/: evaluation_results.txt  test_evaluation.py
